<resources>
    <string name="app_name">Lab_1</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="position">Position</string>
    <string name="audio">Audio</string>
    <string name="start">Start!</string>
    <string name="title">%1$s-%2$d-Back</string>
    <string name="score">Score: %1$d</string>
    <string name="events">Events: %1$d</string>
    <string name="single">Single</string>
    <string name="dual">Dual</string>

    <!-- Results -->
    <string name="result_info">%d events | %.1f s delay | %d/%d correct</string>
    <string name="percent">%.0f%%</string>

    <!-- Dialog -->
    <string name="dialog_title">Round over!</string>
    <string name="dialog_result">Result: %d/%d correct (%.0f%%)</string>

    <!-- Preferences -->
    <string name="nback_header">N-Back</string>

    <string name="stimuli_title">Stimuli</string>
    <string name="n_title">N</string>
    <string name="event_time_title">Time Between Events</string>
    <string name="event_number_title">Number of Events</string>
    <string name="default_title">default_title</string>
</resources>