<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/nback_header">

        <ListPreference
            app:defaultValue="position"
            app:entries="@array/stimuli_entries"
            app:entryValues="@array/stimuli_values"
            app:key="stimuli"
            app:title="@string/stimuli_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/n_entries"
            app:entryValues="@array/n_values"
            app:key="n"
            app:title="@string/n_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2500"
            app:entries="@array/events_time_entries"
            app:entryValues="@array/events_time_values"
            app:key="events_time"
            app:title="@string/event_time_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="20"
            app:entries="@array/events_number_entries"
            app:entryValues="@array/events_number_values"
            app:key="events_number"
            app:title="@string/event_number_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>